# frama-c-mcp-server

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
ast-utils/: ast_utils.opam  dune-project
ast-utils/src/: ast_utils_ast.ml  ast_utils_core.ml  ast_utils_export.ml  ast_utils_extract.ml  ast_utils_ghost.ml  ast_utils_register.ml  ast_utils_sandbox.ml  dune
ast-utils/test/: batch.json  batch.out.json  batch_acsl.json  batch_acsl.out.json  batch_acsl_comprehensive.json  batch_acsl_comprehensive.out.json  batch_comprehensive.json  batch_comprehensive.out.json  batch_ghost.json  batch_ghost.out.json  batch_ghost2.json  batch_ghost2.out.json  batch_ghost_ops.json  batch_ghost_ops.out.json  batch_ghost_rm_stmt.json  batch_ghost_rm_stmt.out.json  batch_loop_multi_clause.json  closure_acsl_global_type.c  closure_callee_acsl_deps.c  closure_stmt_annot_type.c  closure_target_contract_type.c  comprehensive.c  export_test.c  ghost.c  m5_nested_field.c  simple.c  test_sandbox.c
ast-utils/test/regressions/: batch_exec_add_funspec.json  batch_extract_acsl_dependency_closure.json  batch_extract_consinit.json  batch_funspec_scope.json  batch_print_source.json  dispatch_table.c  extract_acsl_dependency_closure.c  extract_consinit_callee.c  extract_spec_deps.c  funspec_scope.c  run.sh  run_exec_add_funspec.sh  run_funspec_scope.sh
docs/: architecture.md  frama-c-mcp-rust-zmq-设计-v2.2.md  frama-c-mcp-设计讨论记录.md  ocaml-rust-ffi-experiments.md
docs/archive/: README.md  architecture-discussion-full.md
docs/archive/design/rust-mcp-server/: architecture.md  detailed-design.md
docs/archive/test-reports/: code-review-fix-plan.md
docs/reference/: frama-c-server-protocol-guide.md
docs/research/: frama-c-server-api-research.md
docs/test-reports/: comprehensive-workflow-test-report.md  rust-mcp-server-test-report.md
experiments/frama-c-ffi/: Makefile
experiments/frama-c-ffi/ocaml_plugin/: Ffi_test.ml  rust_stubs.c
experiments/frama-c-ffi/rust_lib/: Cargo.toml
experiments/frama-c-ffi/rust_lib/src/: lib.rs
experiments/frama-c-ffi/test/: test.c
experiments/rust-calls-ocaml/exp3a-simple/: Cargo.toml  build.rs  ffi_wrapper.c  ocaml_lib.ml
experiments/rust-calls-ocaml/exp3a-simple/src/: main.rs
experiments/rust-calls-ocaml/exp3b-json/: Cargo.toml  build.rs  ffi_wrapper.c  ocaml_lib.ml
experiments/rust-calls-ocaml/exp3b-json/src/: main.rs
experiments/rust-calls-ocaml/exp3c-frama-c/: Cargo.toml  build.rs  ffi_wrapper.c  ocaml_lib.ml  test.c
experiments/rust-calls-ocaml/exp3c-frama-c/src/: main.rs
experiments/standalone-ffi/: Makefile
experiments/standalone-ffi/ocaml_caller/: dune  main.ml
experiments/standalone-ffi/rust_lib/: Cargo.toml
experiments/standalone-ffi/rust_lib/src/: lib.rs
src/: error.rs  lib.rs  linear_invariant.rs  main.rs  state.rs  topo.rs
src/frama_c/: client.rs  codec.rs  mod.rs  transport.rs
src/mcp/: mod.rs  param_compat.rs  server.rs  types.rs
test/: binary_search.c  bubble_sort.c  copy_counter.c  factorial.c  mini_no_recursion.c  test_abs.c  test_comprehensive.c  test_iterative_raw.c  test_phase2.c
tests/: integration_test.rs  lazy_spawn_regression_test.rs  mcp_stdio_test.rs  reload_project_regression_test.rs  sigterm_cleanup_test.rs  store_conclusion_test.rs  zombie_reap_test.rs
