[package]
name = "frama-c-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# MCP protocol (official Rust SDK)
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Schema generation (rmcp requires schemars 1.0+)
schemars = "1.0"

# Byte buffer for frame codec
bytes = "1"

# Error types
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI arguments
clap = { version = "4", features = ["derive"] }

# main error handling
anyhow = "1"
