(library
 (name ast_utils)
 (public_name ast_utils.core)
 (libraries frama-c.kernel yojson)
 (modules :standard \ ast_utils_register)
 (flags :standard -w -9-27)
 (modes byte native)
 (wrapped false)
 (optional))

(library
 (name ast_utils_plugin)
 (public_name ast_utils.plugin)
 (libraries ast_utils frama-c.kernel frama-c-server.core frama-c-wp.core)
 (modules ast_utils_register)
 (flags :standard -w -9-27)
 (modes byte native)
 (optional))

(plugin
 (name ast_utils_plugin)
 (libraries ast_utils.plugin)
 (site (frama-c plugins)))
